[package]
name = "tictactoe"
version = "0.1.0"
authors = ["Andreas Jessen <dressingoak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
strum = "0.20"
strum_macros = "0.20"
rand = "0.8.3"